[FIX][#33] hice mas legible el codigo del formulario para añadir pokemons

--- a/app/static/css/formulario_añadir_pokemon.css
+++ b/app/static/css/formulario_añadir_pokemon.css
@@ -12,28 +12,41 @@
     margin-left: 40px;
     margin-right: 40px;
 }
-.cuadrado{ /*Le agrega un borde*/
-    border-radius: 5px;
-    border: 5px solid #5e00ff;
-}
-.contenedor {/*Hace que lo que esta dentro este en columnas*/
+
+#contenedor_all_against {/*Hace que lo que esta dentro este en columnas*/
     flex-direction: column; 
     display: flex;
     padding: 10px;
     margin: 10px;
+    border-radius: 5px;
+    border: 5px solid #5e00ff;
 }
-
 
 #Submit{ /*caja donde esta el ADD A NEW POKEMON*/
     width: 1568px;
     height: 77px;
     margin-left: 10px;
     font-size: 50px; 
+    border-radius: 5px;
+    border: 5px solid #5e00ff;
 }
 #usuario{ /*Le da el tamaño al cuadrado donde se pone el nombre, nivel y habilidades*/
-    width: 1000px;
-    height: 350px;
+    width: 1005px;
+    height: 365px;
+    padding-top: 20px;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 20px;
+    border-radius: 5px;
+    border: 5px solid #5e00ff;
 }
+#poke_habilidad_1{
+    margin-left: 48px;
+}
+#poke_habilidad_3{
+    margin-left: 48px;
+}
+
 #datos_pokemon_caja{ /*Caja de la derecha donde estan los datos de la especie del pokemon*/
     flex-direction:row; 
     display: flex;
@@ -41,8 +54,10 @@
     padding-right: 50px;
     margin: 10px;
     width: 450px;
+    border-radius: 5px;
+    border: 5px solid #5e00ff;
 }
-#imagen_poke{ /*Espacio donde va la imagen del pokemon y la barra para poner la especie pokemon*/
+#imagen_poke_especie{ /*Espacio donde va la imagen del pokemon y la barra para poner la especie pokemon*/
     display: flex;
     flex-direction: column;
     width: 300px;
@@ -95,25 +110,15 @@ h1{
     width: 70px;
     padding-left: 15px;
 }
-#abilities{ /*Contenedor de las habilidades*/
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 .against{ /*Contenedores de los 2 against*/
     display: flex;
     flex-direction: row;
+    height: 70px;
+    padding-top: 25px;
+    padding-left: 45px;
 }
-.against_texto{ /*Hace que los textos against esten al mismo nivel que las img*/
-    margin-top: 35px;
-    margin-left: 20px;
-}
-/*Hace que las img de bad against esten al mismo nivel que las de good*/
-/*
-.bad_against{ 
-    margin-left: 20px;
-}
-*/
+
 .boton{ /*Los botones*/
     margin-left: 1335px;
 }
@@ -127,6 +132,7 @@ h1{
     width: 440px;
     text-align: center;
     height: 50px;
+    margin-top: 15px;
 }
 #level{/*label de LVL*/
     margin-left: 303px;
@@ -135,14 +141,15 @@ h1{
     margin-left: 45px;
     margin-top: 180px;
 }
-.habilidades_contenedor{ /*Aleja un toque las habilidades de "Abilities"*/
-    margin-top: 25px;
-}
-.nombre_nivel_contenedor{ /*Hace que el contenedor de la izquierda del nombre y nivel no este tan cerca del techo*/
-    padding-top: 23px;
-}
+
+
 #abilities_texto{ /*Le cambia el tamaño a Abilities*/
     font-size:43px ;
+    display: flex;
+    margin-left: 230px;
+    margin-right: 230px;
+    margin-bottom: 30px;
+    margin-top: 65px;
 }
 
 #pokemon_imagen{ /*Imagen del pokemon*/
@@ -152,15 +159,14 @@ h1{
 }
 /*Estilos de los tipos*/
 .posibles_tipo{ /*Permite que los 2 posibles tipos del pokemon esten un toque separado*/
-    margin-top: 10px;
+    margin-top: 20px;
+    transform: translateX(-11%);
 }
 .tipo_imagen{ /*Medidas de las imagenes de los tipos de los pokemon*/
     width:94px;
     height:120px;
 }
-.tipo_pokemon{ /*Es para que los 2 tipos del pokemon esten centrados*/
-    transform: translateX(-11%);
-}
+
 .tipo_pokemon_Good_Against{ /*los tipos de pokemon de Good against*/
     margin-left: 20px;
     margin-top: 10px;
@@ -170,6 +176,9 @@ h1{
     margin-bottom: 10px;
 }
 
-.posibles_tipo {
-    display: none;
+
+
+.caja{
+    border-radius: 5px;
+    border: 5px solid #5e00ff;
 }
